[gd_scene load_steps=6 format=3 uid="uid://ckrrpdn8rkl17"]

[ext_resource type="Script" path="res://games/secret_files/main.gd" id="1_aue0y"]
[ext_resource type="PackedScene" uid="uid://c87cowtynwm55" path="res://chimerin_lab/chimerin.tscn" id="2_e27ex"]
[ext_resource type="PackedScene" uid="uid://bcxpvfyfupbl0" path="res://games/secret_files/file_grabber.tscn" id="3_wc621"]
[ext_resource type="PackedScene" uid="uid://dsryv6f2vbhqr" path="res://games/secret_files/files.tscn" id="4_drjyj"]
[ext_resource type="TileSet" uid="uid://clb1dske3cig2" path="res://games/secret_files/resources/lab_tile_set.tres" id="5_wiiws"]

[node name="SecretFiles" type="Node2D"]
script = ExtResource("1_aue0y")
player_scene = ExtResource("2_e27ex")
file_grabber_scene = ExtResource("3_wc621")
files_scene = ExtResource("4_drjyj")

[node name="TileMap" type="TileMap" parent="."]
visible = false
scale = Vector2(6, 6)
tile_set = ExtResource("5_wiiws")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 1, 1, 0, 65537, 1, 0, 524301, 1, 0, 458765, 1, 0, 458766, 1, 0, 393230, 1, 0, 262148, 1, 0, 196612, 1, 0, 131076, 1, 0, 65540, 1, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 131073, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 524289, 1, 0, 458753, 1, 0, 393217, 1, 0, 327681, 1, 0, 262145, 1, 0, 196609, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 524291, 1, 0, 458755, 1, 0, 393219, 1, 0, 327683, 1, 0, 262147, 1, 0, 196611, 1, 0, 131075, 1, 0, 65539, 1, 0, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 1, 0, 524293, 1, 0, 458757, 1, 0, 393221, 1, 0, 327685, 1, 0, 262149, 1, 0, 196613, 1, 0, 131077, 1, 0, 65541, 1, 0, 5, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 524295, 1, 0, 458759, 1, 0, 393223, 1, 0, 327687, 1, 0, 262151, 1, 0, 196615, 1, 0, 131079, 1, 0, 65543, 1, 0, 7, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 524297, 1, 0, 458761, 1, 0, 393225, 1, 0, 327689, 1, 0, 262153, 1, 0, 196617, 1, 0, 131081, 1, 0, 65545, 1, 0, 9, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 524299, 1, 0, 458763, 1, 0, 393227, 1, 0, 327691, 1, 0, 262155, 1, 0, 196619, 1, 0, 131083, 1, 0, 65547, 1, 0, 11, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 393229, 1, 0, 327693, 1, 0, 262157, 1, 0, 196621, 1, 0, 131085, 1, 0, 65549, 1, 0, 13, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 524302, 1, 0)

[node name="Files" parent="." instance=ExtResource("4_drjyj")]
position = Vector2(960, 540)

[node name="Players" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Spawns" type="Node2D" parent="."]

[node name="Player1" type="Marker2D" parent="Spawns"]
position = Vector2(560, 540)

[node name="Player2" type="Marker2D" parent="Spawns"]
position = Vector2(1360, 540)

[node name="Player3" type="Marker2D" parent="Spawns"]
position = Vector2(960, 140)

[node name="Player4" type="Marker2D" parent="Spawns"]
position = Vector2(960, 940)

[node name="KillTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.9

[node name="GameTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 128.0
grow_vertical = 2
mouse_filter = 2

[node name="ScoreContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
